--- a/gyik.html
+++ b/gyik.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Wed Sep 28 2016 18:28:13 GMT+0000 (UTC) -->
+<!--  This site was created in Webflow. http://www.webflow.com -->
+<!--  Last Published: Thu Sep 29 2016 05:40:39 GMT+0000 (UTC)  -->
 <html data-wf-page="57e762ead1bc77b27510ffa6" data-wf-site="57e762e9d1bc77b27510ffa2">
-<head>
+<head >
   <meta charset="utf-8">
-  <title>ESCO Megoládsok - Kérdések</title>
+  <title >ESCO Megoládsok - Kérdések</title>
   <meta content="A konstrukció lényege, hogy az energia és költségcsökkenést eredményező beruházások előkészítése és lebonyolítása a partner részéről nem igényel pénzügyi ráfordítást. 
 " name="description">
   <meta content="ESCO Megoládsok - Kérdések" property="og:title">
@@ -37,10 +37,10 @@
     })();
   </script>
 </head>
-<body>
+<body >
   <div class="navbar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
     <div class="mobile navbar w-container">
-      <a class="brand w-nav-brand" href="index.html"><img sizes="(max-width: 479px) 100vw, 172px" src="images/logo source file.jpg" srcset="images/logo%20source%20file-p-500x70.jpeg 500w, images/logo%20source%20file-p-800x112.jpeg 800w, images/logo%20source%20file-p-1080x151.jpeg 1080w, images/logo source file.jpg 1517w" width="172">
+      <a class="brand w-nav-brand" href="index.html"><img sizes="(max-width: 479px) 100vw, 172px" src="images/logo-source-file.jpg" srcset="images/logo-source-file-p-500x70.jpeg 500w, images/logo-source-file-p-800x112.jpeg 800w, images/logo-source-file-p-1080x151.jpeg 1080w, images/logo-source-file.jpg 1517w" width="172">
       </a>
       <nav class="mobile-menu w-nav-menu" role="navigation"><a class="menu w-nav-link" href="index.html">Főoldal</a><a class="menu w-nav-link" href="rolunk.html">Rólunk</a><a class="menu w-nav-link" href="esco-megoldas.html">esco</a><a class="menu w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link" href="gyik.html">prices</a><a class="menu w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link" href="gallery.html">gallery</a><a class="menu w-nav-link" href="hogyanmukodik.html">Hogyan működik</a><a class="menu w-nav-link" href="gyik.html">GyIK</a><a class="menu w-nav-link" href="kapcsolat.html"><span class="sing-up">Kapcsolat</span></a>
       </nav>
@@ -53,7 +53,7 @@
   <div class="headline section">
     <div class="headline-box w-container">
       <h1 class="headline-text">Gyakran Ismételt Kérdések</h1>
-      <h2>ESCO energiahatékonysági beruházásokkal kapcsolatban feltett gyakori kérdések és válaszok.</h2>
+      <h2 >ESCO energiahatékonysági beruházásokkal kapcsolatban feltett gyakori kérdések és válaszok.</h2>
       <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-row">
         <div class="w-col w-col-4">
           <div class="price-head">
@@ -62,11 +62,11 @@
             </div>
           </div>
           <div class="price-body w-clearfix"><img class="checklist" src="images/checkmark.png">
-            <h6>Fully Integrated E-Comm</h6><img class="checklist" src="images/checkmark.png">
-            <h6>Sell 1 Product &amp; Donat</h6><img class="checklist" src="images/checkmark.png">
-            <h6>Mobile Website and Store</h6><img class="checklist" src="images/checkmark.png">
-            <h6>Custom Domain</h6><img class="checklist" src="images/checkmark.png">
-            <h6>24/7 Customer Support</h6>
+            <h6 >Fully Integrated E-Comm</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >Sell 1 Product &amp; Donat</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >Mobile Website and Store</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >Custom Domain</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >24/7 Customer Support</h6>
             <div class="price-button"><a class="button in-price-plan" href="hogyanmukodik.html">get started</a>
             </div>
           </div>
@@ -78,11 +78,11 @@
             </div>
           </div>
           <div class="price-body w-clearfix"><img class="checklist" src="images/checkmark.png">
-            <h6>Fully Integrated E-Comm</h6><img class="checklist" src="images/checkmark.png">
-            <h6>Sell 1 Product &amp; Donat</h6><img class="checklist" src="images/checkmark.png">
-            <h6>Mobile Website and Store</h6><img class="checklist" src="images/checkmark.png">
-            <h6>Custom Domain</h6><img class="checklist" src="images/checkmark.png">
-            <h6>24/7 Customer Support</h6>
+            <h6 >Fully Integrated E-Comm</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >Sell 1 Product &amp; Donat</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >Mobile Website and Store</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >Custom Domain</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >24/7 Customer Support</h6>
             <div class="price-button"><a class="button in-price-plan" href="hogyanmukodik.html">get started</a>
             </div>
           </div>
@@ -94,11 +94,11 @@
             </div>
           </div>
           <div class="price-body w-clearfix"><img class="checklist" src="images/checkmark.png">
-            <h6>Fully Integrated E-Comm</h6><img class="checklist" src="images/checkmark.png">
-            <h6>Sell 1 Product &amp; Donat</h6><img class="checklist" src="images/checkmark.png">
-            <h6>Mobile Website and Store</h6><img class="checklist" src="images/checkmark.png">
-            <h6>Custom Domain</h6><img class="checklist" src="images/checkmark.png">
-            <h6>24/7 Customer Support</h6>
+            <h6 >Fully Integrated E-Comm</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >Sell 1 Product &amp; Donat</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >Mobile Website and Store</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >Custom Domain</h6><img class="checklist" src="images/checkmark.png">
+            <h6 >24/7 Customer Support</h6>
             <div class="price-button"><a class="button in-price-plan" href="hogyanmukodik.html">get started</a>
             </div>
           </div>
@@ -116,16 +116,16 @@
       <p class="paragraph">A pénzügyi szervezeteknek nincs tapasztalatuk az energetikai számításokon alapuló kockázat vállalásról, ezért előfordulhat, hogy a kockázati felár magas. Az igénybevevő partnernek az ESCO konstrukció nem érinti a tőkeszerkezetét és a banki hitelállományát. Az ESCO konstrukció dinamikus, elszámolási időszakonként a szolgáltatási díj számításánál figyelembe vesszük a változó fogyasztást, az energiaárakat és az esetlegesen változó üzemidőt.</p>
       <h3 class="h3-list">2.	Kinek lehet előnyös a konstrukció?</h3>
       <p class="paragraph">Ahol magas a beépített teljesítmény és a működési idő:
-        <br> &nbsp;&nbsp;&nbsp;<strong>-	legalább 3000 négyzetméter</strong>
-        <br> &nbsp;&nbsp; <strong>-	legalább 8 éves létesítmény</strong>
-        <br>&nbsp;&nbsp;&nbsp;<strong>-	legalább 10 óra nap működési idő</strong>
-        <br>&nbsp;&nbsp;&nbsp;<strong>-	épület funkciója:</strong>
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>o	gyártó csarnokok</strong>
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>o	ipari telephelyek és létesítményeik</strong>
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>o	bolti eladóterek</strong>
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>o	közvilágítási rendszerek</strong>
+        <br > &nbsp;&nbsp;&nbsp;<strong >-	legalább 3000 négyzetméter</strong>
+        <br > &nbsp;&nbsp; <strong >-	legalább 8 éves létesítmény</strong>
+        <br >&nbsp;&nbsp;&nbsp;<strong >-	legalább 10 óra nap működési idő</strong>
+        <br >&nbsp;&nbsp;&nbsp;<strong >-	épület funkciója:</strong>
+        <br >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong >o	gyártó csarnokok</strong>
+        <br >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong >o	ipari telephelyek és létesítményeik</strong>
+        <br >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong >o	bolti eladóterek</strong>
+        <br >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong >o	közvilágítási rendszerek</strong>
       </p>
-      <h3 class="h3-list">3. Mi történik, ha változik a villamosenergia<br>
+      <h3 class="h3-list">3. Mi történik, ha változik a villamosenergia<br >
 vagy a földgáz egységára?</h3>
       <p class="paragraph">Mivel az ESCO konstrukció megtakarítás alapú, ezért az elszámolás is követi az energiaárak alakulását.</p>
       <h3 class="h3-list">4. Ha az érintett fogyasztási helyen növekszik az üzemidő (pl.: két műszakról háromra váltás), hogyan változik a megtakarítás mértéke?</h3>
@@ -183,21 +183,12 @@ megtakarításból?</h3>
         <div class="w-col w-col-6">
           <div class="footer-text">© 2016 - Greenvestment Kft.</div>
         </div>
-        <div class="iphonef social-footer w-col w-col-6">
-          <a class="w-inline-block" href="#"><img class="social-icons" height="32" src="images/fb.svg" width="32">
-          </a>
-          <a class="w-inline-block" href="#"><img class="social-icons" height="32" src="images/twitter.svg" width="32">
-          </a>
-          <a class="w-inline-block" href="#"><img class="social-icons" height="32" src="images/linkedin.svg" width="32">
-          </a>
-          <a class="w-inline-block" href="#"><img class="social-icons" height="32" src="images/googleplus.svg" width="32">
-          </a>
-        </div>
+        <div class="iphonef social-footer w-col w-col-6"></div>
       </div>
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
-  <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
