--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Wed Sep 28 2016 18:28:13 GMT+0000 (UTC) -->
+<!--  This site was created in Webflow. http://www.webflow.com -->
+<!--  Last Published: Thu Sep 29 2016 05:40:39 GMT+0000 (UTC)  -->
 <html data-wf-page="57e762ead1bc77b27510ffa9" data-wf-site="57e762e9d1bc77b27510ffa2">
-<head>
+<head >
   <meta charset="utf-8">
-  <title>Greenvestment Kft. - Kapcsolat</title>
+  <title >Greenvestment Kft. - Kapcsolat</title>
   <meta content="A Greenvestment Kft. az ESCO energetikahatékonysági beruházások és világításkorszerűsítési megoldások szakértője. 
 " name="description">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -33,11 +33,11 @@
     })();
   </script>
 </head>
-<body>
+<body >
   <div class="line"></div>
   <div class="navbar w-nav" data-animation="default" data-collapse="medium" data-contain="1" data-duration="400">
     <div class="mobile navbar w-container">
-      <a class="brand w-nav-brand" href="index.html"><img sizes="(max-width: 479px) 100vw, 172px" src="images/logo source file.jpg" srcset="images/logo%20source%20file-p-500x70.jpeg 500w, images/logo%20source%20file-p-800x112.jpeg 800w, images/logo%20source%20file-p-1080x151.jpeg 1080w, images/logo source file.jpg 1517w" width="172">
+      <a class="brand w-nav-brand" href="index.html"><img sizes="(max-width: 479px) 100vw, 172px" src="images/logo-source-file.jpg" srcset="images/logo-source-file-p-500x70.jpeg 500w, images/logo-source-file-p-800x112.jpeg 800w, images/logo-source-file-p-1080x151.jpeg 1080w, images/logo-source-file.jpg 1517w" width="172">
       </a>
       <nav class="mobile-menu w-nav-menu" role="navigation"><a class="menu w-nav-link" href="index.html">Főoldal</a><a class="menu w-nav-link" href="rolunk.html">Rólunk</a><a class="menu w-nav-link" href="esco-megoldas.html">esco</a><a class="menu w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link" href="gyik.html">prices</a><a class="menu w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link" href="gallery.html">gallery</a><a class="menu w-nav-link" href="hogyanmukodik.html">Hogyan működik</a><a class="menu w-nav-link" href="gyik.html">GyIK</a><a class="menu w-nav-link" href="kapcsolat.html"><span class="sing-up">Kapcsolat</span></a>
       </nav>
@@ -73,7 +73,7 @@
               <p class="thankyou">Thank you! Your submission has been received!</p>
             </div>
             <div class="error-msg w-form-fail">
-              <p>Oops! Something went wrong while submitting the form :(</p>
+              <p >Oops! Something went wrong while submitting the form :(</p>
             </div>
           </div>
         </div>
@@ -82,10 +82,10 @@
           <p class="paragraph">A Greenvestment Kft. az ESCO energetikahatékonysági beruházások és világításkorszerűsítési megoldások szakértője.</p>
           <div class="map w-widget w-widget-map" data-widget-latlng="47.528846,19.060015" data-widget-style="terrain" data-widget-tooltip="Greenvestment Kft." data-widget-zoom="14"></div>
           <div class="company-info w-clearfix"><img class="tel-icon" src="images/phone-icon.png">
-            <h3>1800 321 7654</h3>
+            <h3 >1800 321 7654</h3>
           </div>
           <div class="w-clearfix"><img class="tel-icon" src="images/email-icon.png">
-            <h3>info@greenvestment.hu</h3>
+            <h3 >info@greenvestment.hu</h3>
           </div>
         </div>
       </div>
@@ -97,21 +97,12 @@
         <div class="w-col w-col-6">
           <div class="footer-text">© 2016 - Greenvestment Kft.</div>
         </div>
-        <div class="iphonef social-footer w-col w-col-6">
-          <a class="w-inline-block" href="#"><img class="social-icons" height="32" src="images/fb.svg" width="32">
-          </a>
-          <a class="w-inline-block" href="#"><img class="social-icons" height="32" src="images/twitter.svg" width="32">
-          </a>
-          <a class="w-inline-block" href="#"><img class="social-icons" height="32" src="images/linkedin.svg" width="32">
-          </a>
-          <a class="w-inline-block" href="#"><img class="social-icons" height="32" src="images/googleplus.svg" width="32">
-          </a>
-        </div>
+        <div class="iphonef social-footer w-col w-col-6"></div>
       </div>
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
-  <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
